examples/test/testpolicy8260.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8260
  namespace: namespace432
spec:
  podSelector:
    matchLabels:
      key37: value13
      key6: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value26
          key39: value49
      podSelector:
        matchLabels:
          key38: value11
          key24: value25
          key4: value36
